[package]
name = "railway-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
axiom = "0.2.1"
axum = "0.8"
bollard = "0.20.1"
anyhow = "1.0"
futures-util = "0.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.50.0", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"
